fix: table header without line breaks in profile search

--- a/src/app/user-profile/user-profile-search/user-profile-search.component.scss
+++ b/src/app/user-profile/user-profile-search/user-profile-search.component.scss
@@ -20,4 +20,17 @@
   .p-datatable .p-datatable-tbody > tr > td:first-of-type {
     white-space: nowrap;
   }
+
+  /* correct header layouting by lib */
+  .table-header-wrapper {
+    flex-direction: row !important;
+    justify-content: flex-start !important;
+    flex-wrap: wrap !important;
+  }
+  .table-header-wrapper span:first-child {
+    margin-right: 10px !important;
+  }
+  ocx-column-group-selection {
+    display: none;
+  }
 }
